aws/i4trust/i4trust-demo/happypets-wallet/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: happypets-wallet
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: happypets-wallet
      app.kubernetes.io/name: happypets-wallet
  template:
    labels:
      app.kubernetes.io/instance: happypets-wallet
      app.kubernetes.io/name: happypets-wallet
    spec:
      containers:
      - name: vcbackend
        image: 'wistefan/vcwallet'
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: static
            protocol: TCP
