aws/i4trust/i4trust-demo/happypets-wallet/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: 
    cert-utils-operator.redhat-cop.io/certs-from-secret: happypets-wallet
  name: happypets-wallet
spec:
  host: wallet.fiware.dev
  port:
    targetPort: 3000
  tls: 
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to: 
    kind: Service
    name: happypets-wallet
